# CPQ-aware-index

./: .gitignore  README.md
constructing_index/construct_cpqx/: CMakeLists.txt  graph.h  kbisimulation.cpp  kbisimulation.h
constructing_index/construct_cpqx/index/: robots_2MG_l2h  robots_2_l2h
constructing_index/construct_cpqx/result/: test
constructing_index/construct_iacpqx/: CMakeLists.txt  graph.cpp  index.cpp  index.h  main.cpp  run.sh  utility.h  workload.cpp  workload.h  workloadaware_transequivalent.cpp  workloadaware_transequivalent.h
constructing_index/construct_iapathindex/: CMakeLists.txt  index.cpp  index.h  pathset.cpp  pathset.h  utility.h  workload.cpp  workload.h
constructing_index/construct_structuralindex/: CMakeLists.txt  graph.cpp  index.cpp  index.h  kbisimulation.h  main.cpp  run.sh  utility.h
constructing_index/construct_structuralindex/index/: robots_2MG_h2p
constructing_index/construct_structuralindex/result/: test
constructing_index/construct_wastructuralindex/: CMakeLists.txt  graph.cpp  graph.h  index.cpp  index.h  main.cpp  utility.h  workload.cpp  workload.h  workloadaware_transequivalent.cpp  workloadaware_transequivalent.h
constructing_index/construct_wastructuralindex/index/: robots_2_wa_workloadMW_l2h
query/: query_fulllabel4k1  test
query_processing/query_cpqx/: CMakeLists.txt  index.cpp  index.h  main.cpp  query.cpp  query.h
query_processing/query_cpqx/result/: answernum_maintenance  answernum_test_query  answernum_test_query_mg  answernum_test_query_mw  answernum_test_query_wa_mg  answernum_test_wa_mg  maintenance  maintenance_maintenance  test_mg  test_mw  test_mw_maintenance  test_query  test_query_wa  test_wa_mg  test_wa_mg_maintenance  workloadmaintenance_test_mw
query_processing/query_structuralindex/: CMakeLists.txt  graph.cpp  graph.h  index.cpp  index.h  main.cpp  maintenance_workload  query.cpp  query.h  run.sh  utility.h
query_processing/query_structuralindex/result/: answernum_test_mg  answernum_test_mw  answernum_test_query_wa  maintenance_test_mg  maintenance_test_wa_mg  test_mg_maintenance  test_query_mg  test_query_mw  test_query_wa_mg
workload/: query_fulllabel4k2  query_fulllabel4k3  query_fulllabel4k4
(+50 files in other folders)
